Fix Orders/AH input flow, material resolution, and 1.12.2 compatibility
Orders & auction house input:
- SignInputUtil: the sign-editor input never worked on 1.12.2 (no
  Player#openSign API existed there), which broke "/orders price",
  "/orders amount", "/orders search" and "/ah search". Add a chat
  transport that behaves identically for Java 1.12.2 and Eaglercraft
  clients; the sign transport is retained only where the 1.20+ API
  exists (reflectively probed, unreachable on 1.12.2).
- Per-player-UUID pending input with concurrent multi-player support,
  exactly one pending chat message consumed, normal chat not swallowed,
  cancel/close/quit cleanup, invalid amount/price keeps correct state,
  AH search reopens/refreshes per player.

Material resolution:
- LegacyMaterialSupport is the single source of truth: exact
  resolved-name match before substring, STONE->STONE, unknown->null
  (never STONE), no fake AMETHYST_BLOCK mapping; "oak door"/"oak_door"
  no longer resolves to dark oak via substring.

Localization:
- fr_FR: fix SEARCH.LORE color code line and add missing
  CHAT-MANAGER.HELP entry; all 7 locales now at 0 color mismatches and
  0 extra-vs-en keys.

Config:
- COMBAT-MANAGER.EXCLUDED-WORLDS: replace null key with an empty list
  so the section loads cleanly.

1.12.2 / Java 8 compliance:
- Remove post-1.12.2 Bukkit API usage (no block data, Phantom,
  Damageable, modern material constants or packets); NMS references
  are v1_12_R1 only, plus inert reflective string guards.

Build & tests:
- pom: explicit adventure-text-serializer-json 4.14.0 (the offline
  repository's gson pom lost that transitive dependency); surefire
  3.1.2 and JUnit 5.10.1 with launcher 1.10.1 so `mvn clean test` runs
  fully offline; test-scope only, shaded jar unchanged.
- StaffModeListenerTest: rewrite the Bukkit InventoryView mock to
  override only non-final 1.12.2 methods; javac correctly rejected the
  previous illegal final-method overrides. No assertions changed.

Test sui