@@ -37,7 +37,7 @@ class DatabaseManagerServerWipeTest {
 
             Path backup = tempDirectory.resolve("database.sql");
             manager.writePortableBackup(backup);
-            String sql = Files.readString(backup);
+            String sql = new String(java.nio.file.Files.readAllBytes(backup), java.nio.charset.StandardCharsets.UTF_8);
             assertTrue(sql.contains("CREATE TABLE players"));
             assertTrue(sql.contains("INSERT INTO \"punishments\""));
             assertTrue(sql.contains("'keep-this-ban'"));
@@ -90,29 +90,7 @@ class DatabaseManagerServerWipeTest {
 
     private void createSchema(Connection connection, boolean includeCommitTable) throws Exception {
         try (Statement statement = connection.createStatement()) {
-            statement.execute("""
-                    CREATE TABLE players (
-                        uuid TEXT PRIMARY KEY,
-                        username TEXT,
-                        money REAL,
-                        shards INTEGER,
-                        kills INTEGER,
-                        deaths INTEGER,
-                        playtime_seconds INTEGER,
-                        blocks_placed INTEGER,
-                        blocks_broken INTEGER,
-                        mobs_killed INTEGER,
-                        kill_streak INTEGER,
-                        highest_kill_streak INTEGER,
-                        money_spent REAL,
-                        money_made REAL,
-                        scoreboard_visible INTEGER,
-                        keyall_remaining_seconds INTEGER,
-                        shard_booster_expiry INTEGER,
-                        mob_spawn_disabled_until BIGINT,
-                        phantom_disabled_until BIGINT
-                    )
-                    """);
+            statement.execute(String.join("\n", "CREATE TABLE players (\n", "uuid TEXT PRIMARY KEY,\n", "username TEXT,\n", "money REAL,\n", "shards INTEGER,\n", "kills INTEGER,\n", "deaths INTEGER,\n", "playtime_seconds INTEGER,\n", "blocks_placed INTEGER,\n", "blocks_broken INTEGER,\n", "mobs_killed INTEGER,\n", "kill_streak INTEGER,\n", "highest_kill_streak INTEGER,\n", "money_spent REAL,\n", "money_made REAL,\n", "scoreboard_visible INTEGER,\n", "keyall_remaining_seconds INTEGER,\n", "shard_booster_expiry INTEGER,\n", "mob_spawn_disabled_until BIGINT,\n", "phantom_disabled_until BIGINT\n", ")\n"));
             statement.execute("CREATE TABLE homes (owner_uuid TEXT, name TEXT)");
             statement.execute("CREATE TABLE teams (id TEXT)");
             statement.execute("CREATE TABLE team_members (team_id TEXT, player_uuid TEXT)");
@@ -129,23 +107,14 @@ class DatabaseManagerServerWipeTest {
             statement.execute("CREATE TABLE spawner_loot (spawner_id INTEGER)");
             statement.execute("CREATE TABLE crate_blocks (world TEXT)");
             if (includeCommitTable) {
-                statement.execute("""
-                        CREATE TABLE server_wipe_commits (
-                            wipe_id TEXT PRIMARY KEY,
-                            committed_at INTEGER NOT NULL
-                        )
-                        """);
+                statement.execute(String.join("\n", "CREATE TABLE server_wipe_commits (\n", "wipe_id TEXT PRIMARY KEY,\n", "committed_at INTEGER NOT NULL\n", ")\n"));
             }
         }
     }
 
     private void seedData(Connection connection) throws Exception {
         try (Statement statement = connection.createStatement()) {
-            statement.executeUpdate("""
-                    INSERT INTO players VALUES (
-                        'player-1', 'Player', 500, 25, 9, 3, 900, 12, 13, 14, 4, 8, 200, 300, 1, 60, 12345, 0, 0
-                    )
-                    """);
+            statement.executeUpdate(String.join("\n", "INSERT INTO players VALUES (\n", "'player-1', 'Player', 500, 25, 9, 3, 900, 12, 13, 14, 4, 8, 200, 300, 1, 60, 12345, 0, 0\n", ")\n"));
             statement.executeUpdate("INSERT INTO homes VALUES ('player-1', 'base')");
             statement.executeUpdate("INSERT INTO player_crate_keys VALUES ('player-1')");
             statement.executeUpdate("INSERT INTO punishments VALUES ('punishment-1', 'keep-this-ban')");
